--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 
 
+      .gradient {
+        /* background: linear-gradient(90deg, #d53369 0%, #daae51 100%); */
+        background: #7f7fd5; 
+  background: -webkit-linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4); 
+   background: linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4); 
+      }
+      
+
+
 .custom-gradient {
     @apply bg-blue-200 absolute top-0 left-0 bg-gradient-to-b from-indigo-300 via-gray-900 to-blue-800 bottom-0 leading-5 h-full w-full overflow-hidden;
     background: linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4);
@@ -30,5 +39,19 @@
     border-radius: inherit;
     z-index: -1;
   }
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+}
 
-
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
